WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266983
[GStreamer] Fix build without GStreamer debug
https://bugs.webkit.org/show_bug.cgi?id=266983
Summary
[GStreamer] Fix build without GStreamer debug
Olivier Blin
Reported
2024-01-02 08:37:58 PST
The streamTypeToString() helper is only defined when GStreamer debug is enabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2024-01-02 08:45:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22305
EWS
Comment 2
2024-01-02 12:11:42 PST
Committed
272573@main
(d32c300612cd): <
https://commits.webkit.org/272573@main
> Reviewed commits have been landed. Closing PR #22305 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-02 12:12:21 PST
<
rdar://problem/120381942
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug