[GStreamer] Fix build without GStreamer debug https://bugs.webkit.org/show_bug.cgi?id=266983

Reviewed by Philippe Normand.

The streamTypeToString() helper is only defined when GStreamer debug is enabled.
Also avoid defining findPipeline() which is unused when debug is disabled.

* Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::didReceiveInitializationSegment):
* Source/WebCore/platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp:
(webKitMediaSrcEmitStreams):

Canonical link: https://commits.webkit.org/272573@main